--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <div class="infos">
       <div class="infos__ip">
         <p class="info__title">IP adress</p>
-        <p class="info__value">192.212.174.101</p>
+        <p class="info__value" id="user_ip">192.212.174.101</p>
       </div>
       <div class="infos__location">
         <p class="info__title">location</p>
-        <p class="info__value">Brooklyn NY</p>
+        <p class="info__value" id="location" >Brooklyn NY</p>
       </div>
       <div class="infos__timezone">
         <p class="info__title">timezone</p>
-        <p class="info__value">UTC -05:00</p>
+        <p class="info__value" id="timezone" >UTC -05:00</p>
       </div>
       <div class="infos__isp">
         <p class="info__title">isp</p>
-        <p class="info__value">Space X Starlink</p>
+        <p class="info__value" id="isp">Space X Starlink</p>
       </div>
 
     </div>
